ParaView connections now start correctly
ParaView connections defined in the Preferences page now execute
correctly and allow Eclipse to connect to them.

Signed-off-by: Robert Smith <smithrw@ornl.gov>